--- a/CalendarApplication/CalendarApplication/Views/Maintenance/Index.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Maintenance/Index.cshtml
@@ -41,7 +41,7 @@
 @Html.HiddenFor(m => Model.SubmitValue);
 <fieldset>
     <legend>Event types</legend>
-    <table>
+    <!--<table>
         <tr>
             <td>
                 @Html.DropDownListFor(m => Model.SelectedEventType, new SelectList(Model.EventTypes, "Value", "Text"))
@@ -53,7 +53,8 @@
                 <input type="submit" value="Create new" onclick="setSubmitValue(1)" />
             </td>
         </tr>
-    </table>
+    </table>-->
+    @Html.ActionLink("Manage event types","ManageEventTypes")
 </fieldset>
 
 <fieldset>
