--- a/CalendarApplication/CalendarApplication/Content/Calendar.css
+++ b/CalendarApplication/CalendarApplication/Content/Calendar.css
@@ -84,6 +84,25 @@ table.day-view td.row {
 div.day-event {
     text-align:center;
     vertical-align:middle;
+    border-radius:4px;
+    border:1px black solid;
+    width:98%;
+    position:absolute;
+    z-index:2;
+}
+div.selection {
+    border:1px black dashed;
+    z-index:3;
+    background-color:lightgoldenrodyellow;
+    opacity:0.6;
+}
+div.drawer {
+    width:90%;
+    height:3px;
+    border:1px black solid;
+    position:absolute;
+    border-radius:2px;
+    left:5%;
 }
 
 /**************************************************/
