--- a/CalendarApplication/CalendarApplication/Content/Calendar.css
+++ b/CalendarApplication/CalendarApplication/Content/Calendar.css
@@ -94,7 +94,7 @@ div.selection {
     border:1px black dashed;
     z-index:3;
     background-color:lightgoldenrodyellow;
-    opacity:0.6;
+    opacity:0.4;
 }
 div.drawer {
     width:90%;
@@ -103,6 +103,30 @@ div.drawer {
     position:absolute;
     border-radius:2px;
     left:5%;
+    cursor:row-resize;
+}
+div.selection div.remove {
+    border:1px solid black;
+    border-radius:8px;
+    width:16px;
+    height:16px;
+    color:white;
+    background-color:black;
+    position:absolute;
+    right:5%;
+    top:8px;
+    cursor:pointer;
+    opacity:1;
+    z-index:9;
+}
+div.time_counter {
+    border:1px black solid;
+    border-radius:3px;
+    background-color:black;
+    display:none;
+    color:white;
+    position:absolute;
+    z-index:10;
 }
 
 /**************************************************/
