Added functionality to the click-and-drag selection in day view. Room checks are still missing though.

--- a/CalendarApplication/CalendarApplication/Views/Event/Index.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Event/Index.cshtml
@@ -110,7 +110,7 @@ else
             {
                 <tr><td>
                     <input type="button"
-                        onclick="gotoUrl('@Url.Action("EditEvent", "Event", new { eventId = Model.ID, year = 0, month = 0, day = 0 }, null)')"
+                        onclick="gotoUrl('@Url.Action("EditEvent", "Event", new { eventId = Model.ID }, null)')"
                         value="Edit event"
                         style="width:100%" />
                 </td></tr>
