--- a/CalendarApplication/CalendarApplication/Views/Calendar/Day.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Calendar/Day.cshtml
@@ -14,6 +14,11 @@
 
 <h3 style="color:red">@TempData["errorMsg"]</h3>
 
+<script>
+    setDate('@Model.Date.ToString("yyyy-MM-dd")');
+    offset = @Config.GetStartingHourOfDay();
+</script>
+
 <div id="time_counter" class="time_counter"></div>
 
 <form id="cal_form" method="post">
@@ -69,7 +74,6 @@
                                         @* div needed for positioning of the other divs (events and selection) *@
                                         <div id="room_wrap_@room.Value" style="position:relative">
                                             <div id="room_@room.Value" class="room" style="position:absolute;z-index:1;width:100%;height:720px;">
-                                                <script>addRoom(@(room.Value))</script>
                                                 @foreach (BasicEvent e in Model.Events)
                                                 {
                                                     if (e.Rooms.Contains(new Room { ID = Convert.ToInt32(room.Value) }))
@@ -96,14 +100,14 @@
                                                             }
                                                         }
                                             
-                                                        <div class="day-event"
+                                                        <div class="day-event" id="event_@e.ID"
                                                             style="top:@(start)px;height:@(height)px;
-                                                                    background-color:@(e.getColor());@(e.ViewVisible ? "cursor:pointer" : "")"
-                                                            @(e.ViewVisible ? "onclick=window.location='" + Url.Action("Index", "Event", new { eventId = e.ID }) + "'" : "")>
+                                                                    background-color:@(e.getColor());@(e.ViewVisible ? "cursor:pointer" : "")">
                                                             @if (e.ViewVisible)
                                                             {
                                                                 @e.Name <br />
                                                                 @* Creator: e.Creator and more fields *@
+                                                                <script>addEventGoto(@e.ID);</script>
                                                             }
                                                             else
                                                             {
@@ -113,6 +117,7 @@
                                                     }
                                                 }
                                             </div>
+                                            <script>addRoom(@(room.Value))</script>
                                         </div>
                                     </td>
                                 }
@@ -144,14 +149,7 @@
                         <legend>Create event</legend>
                         <br />
                         @* A user is signed in... *@
-                        <input type="button" value="Create event!" onclick="window.location='@Url.Action("EditEvent", "Event",
-                                                                        new
-                                                                        {
-                                                                            eventId = -1,
-                                                                            year = Model.Date.Year,
-                                                                            month = Model.Date.Month,
-                                                                            day = Model.Date.Day
-                                                                        })'"/>
+                        <input type="button" value="Create event!" onclick="createNewEvent()"/>
                         <br />
                         <br />
                         <span style="color:gray;font-size:12px">Tip: click and drag to select<br />rooms and time.</span>
