made a few small changes to database (mostly varchar lengths and comments) small change to layout of login page small change to about page

--- a/CalendarApplication/CalendarApplication/Views/Home/About.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Home/About.cshtml
@@ -4,8 +4,8 @@
 
 
 <h2>About</h2>
-
-    PKSU 2013 calendar web application for events v0.1.
+    <!-- Licensing information and email for original developers -->
+    PKSU 2013, generic calendar web application for events
     <br/>
     Created in 2013 by Stephan S. Lorenzen, Andreas E. Olsen and Johan V. Damgaard
     <br/>
@@ -13,10 +13,8 @@
     <br />
     This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/">Creative Commons Attribution-NonCommercial 3.0 Unported License</a>.
     <br/>
-    If you find any bugs while using this application, please copy the error message, if any, and send it to the email below.
-    <br />
-    If you would like to use this application with another venue or similar, send us a mail and we'll work something out.
-    <br/>
+    If you would like to use this application, send us a mail and we can send you a copy:
+
             <script type="text/javascript">
             <!--
             // Email obfuscator script 2.1 by Tim Williams, University of Arizona
@@ -37,7 +35,15 @@
                   link += (key.charAt(ltr))
                 }
               }
-            document.write("<a href='mailto:"+link+"'>Email us.</a>")
+            document.write("<a href='mailto:"+link+"'>Email us</a>")
             }
             //-->
             </script><noscript>Sorry, you need Javascript enabled to see the email, so we don't get spammed by bots.</noscript>
+    <br />
+    <!--Put any messages about current maintainance people here along with contact information-->
+    <br />
+    This iteration is being maintained by original developers.
+    <br />
+    <!-- temp message until proper error logging and error messages are in -->
+    If you find any bugs while using this application, please copy the error message, if any, and send it to the email above.
+    <br />
