forgot about requirements for creation/approval in last commit fixed a small typo in stringlistpartial

--- a/CalendarApplication/CalendarApplication/Views/Event/StringListPartial.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Event/StringListPartial.cshtml
@@ -2,7 +2,7 @@
 
 
         <div id='@(Model.ViewID + "_" + Model.Place)_Text_char_counter'>Characters left: 250</div>
-        <input type='text' id='@(Model.ViewID + "_" + Model.Place)"_Text'
+        <input type='text' id='@(Model.ViewID + "_" + Model.Place)_Text'
             name='@(Model.ViewName + "[" + Model.Place + "]").Text' value='@Model.Text' 
             onkeyup="updateCounter('@(Model.ViewID + "_" + Model.Place + "_Text")','250'); setState(); validateInput('@(Model.ViewID)','StringList',true,true);" />
         <input type='hidden' id='@(Model.ViewID + "_" + Model.Place)_Active' name='@(Model.ViewName +
