--- a/CalendarApplication/CalendarApplication/Views/Home/About.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Home/About.cshtml
@@ -5,7 +5,7 @@
 
 <h2>About</h2>
     <!-- Licensing information and email for original developers -->
-    PKSU 2013, generic calendar web application for events
+    PKSU 2013, generic calendar web application for events @CalendarApplication.Models.Maintenance.Config.GetVersion()
     <br/>
     Created in 2013 by Stephan S. Lorenzen, Andreas E. Olsen and Johan V. Damgaard
     <br/>
