--- a/CalendarApplication/CalendarApplication/Views/Account/Login.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Account/Login.cshtml
@@ -5,8 +5,8 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
+<script src="@Url.Content("~/Scripts/jquery.validate.min.js?" + CalendarApplication.Models.Maintenance.Config.GetVersion())" type="text/javascript"></script>
+<script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js?" + CalendarApplication.Models.Maintenance.Config.GetVersion())" type="text/javascript"></script>
 
 <!-- Print message if any (fx if unsuccessful login) -->
 <p style="color:red">
