--- a/CalendarApplication/CalendarApplication/Views/Account/Register.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Account/Register.cshtml
@@ -5,8 +5,8 @@
 }
 
 
-<script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
+<script src="@Url.Content("~/Scripts/jquery.validate.min.js?" + CalendarApplication.Models.Maintenance.Config.GetVersion())" type="text/javascript"></script>
+<script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js?" + CalendarApplication.Models.Maintenance.Config.GetVersion())" type="text/javascript"></script>
 
 <h2>Register</h2>
 
