--- a/CalendarApplication/CalendarApplication/Views/Event/EditEvent.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Event/EditEvent.cshtml
@@ -11,7 +11,7 @@
 
 <h3 style="color:red">@TempData["errorMsg"]</h3>
 
-<script src="@Url.Content("~/Scripts/edit-event.js")" type="text/javascript"></script>
+<script src="@Url.Content("~/Scripts/edit-event.js?" + CalendarApplication.Models.Maintenance.Config.GetVersion())" type="text/javascript"></script>
 
 <style>
     #type_warning {
