--- a/CalendarApplication/CalendarApplication/Views/Maintenance/ManageEventTypes.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Maintenance/ManageEventTypes.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Manage Event Types";
 }
 
-<script src="@Url.Content("~/Scripts/maintenance.js")" type="text/javascript"></script>
+<script src="@Url.Content("~/Scripts/maintenance.js?" + CalendarApplication.Models.Maintenance.Config.GetVersion())" type="text/javascript"></script>
 
 <h2>Manage Event Types</h2>
 
