--- a/CalendarApplication/CalendarApplication/Views/Shared/_Layout.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Shared/_Layout.cshtml
@@ -3,22 +3,23 @@
 
     @using CalendarApplication.Models.Calendar;
     @using CalendarApplication.Models.User;
+    @using CalendarApplication.Models.Maintenance;
 
 <head>
     <meta charset="utf-8" />
     <title>Stengade calendar application - @ViewBag.Title</title>
 
     @* Page-wide scripts and css needed *@
-    <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
-    <link href="@Url.Content("~/Content/themes/base/jquery.ui.all.css")" rel="stylesheet" type="text/css" />
-    <script src="@Url.Content("~/Scripts/jquery-1.5.1.min.js")" type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/modernizr-1.7.min.js")" type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/jquery.unobtrusive-ajax.js")" type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/jquery.validate.js")" type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.js")" type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/jquery-ui-1.8.11.min.js")" type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/tools-script.js")" type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/date-picker-validator.js")" type="text/javascript"></script>
+    <link href="@Url.Content("~/Content/Site.css?" + Config.GetVersion())" rel="stylesheet" type="text/css" />
+    <link href="@Url.Content("~/Content/themes/base/jquery.ui.all.css?" + Config.GetVersion())" rel="stylesheet" type="text/css" />
+    <script src="@Url.Content("~/Scripts/jquery-1.5.1.min.js?" + Config.GetVersion())" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/modernizr-1.7.min.js?" + Config.GetVersion())" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/jquery.unobtrusive-ajax.js?" + Config.GetVersion())" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/jquery.validate.js?" + Config.GetVersion())" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.js?" + Config.GetVersion())" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/jquery-ui-1.8.11.min.js?" + Config.GetVersion())" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/tools-script.js?" + Config.GetVersion())" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/date-picker-validator.js?" + Config.GetVersion())" type="text/javascript"></script>
 </head>
 
 <body>
