fixed print event to show ok/error images for cirtain event type fields

--- a/CalendarApplication/CalendarApplication/Views/Shared/_PrintEvent.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Shared/_PrintEvent.cshtml
@@ -9,14 +9,14 @@
     <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
 </head>
 
-<body>
+<body><!--
     <table class="layout-style-basic">
         <tr>
-            <td class="layout-body">
+            <td class="layout-body">-->
                 @RenderBody()
-            </td>
+            <!--</td>
         </tr>
-        </table>
+        </table>-->
 </body>
 
 </html>
