--- a/CalendarApplication/CalendarApplication/Views/Event/PrintEvent.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Event/PrintEvent.cshtml
@@ -56,7 +56,7 @@
                     }
                 </style>
 
-<table class="event-table">
+<table>
     <tr>
         <td>
             @if (Model.ID < 0)
@@ -70,7 +70,7 @@
     
                 UserModel u = UserModel.GetCurrent();
     
-                <table class="event-table">
+                <table class="event-table" style="width:80%;">
                     <tr id="type">
                         <td style="width:100px;"><b>Type</b></td><td>@Model.TypeName</td>
                     </tr>
@@ -95,7 +95,7 @@
                     @if (UserModel.GetCurrentUserID() != -1)
                     {
                         <tr id="visibel">
-                            <td><b>Public</b></td><td><div class="@(Model.Visible ? "tick" : "red_cross")" style="width:24px;height:24px"></div></td>
+                            <td><b>Public</b></td><td><img src="@Url.Content("~/Content/images/" + (Model.Visible ? "ok.png" : "error.png"))" height="22" width="22" /></td>
                         </tr>
                     }
                     <tr id="rooms">
@@ -122,7 +122,7 @@
                                         case Fieldtype.Text:        @fm.StringValue break;
                                         case Fieldtype.File:        @fm.IntValue break;
                                         case Fieldtype.Datetime:    @fm.DateValue break;
-                                        case Fieldtype.Bool:        <div style="width:26px;height:26px" class="@(fm.BoolValue ? "tick" : "red_cross")"></div> break;
+                                        case Fieldtype.Bool:        <img src="@Url.Content("~/Content/images/" + (fm.BoolValue ? "ok.png" : "error.png"))" width="22" height="22"/> break;
                                         case Fieldtype.UserList:
                                         case Fieldtype.GroupList:   for (int i = 0; i < fm.List.Count(); i++)
                                                                     {
